Fix repeated exceptions when monitoring ThreadPerTaskExecutor without --add-opens
Previously, when monitoring a ThreadPerTaskExecutor without the required
--add-opens java.base/java.util.concurrent=ALL-UNNAMED JVM flag, the
METHOD_HANDLE_THREAD_COUNT_FROM_THREAD_PER_TASK_EXECUTOR would be null,
but the code would still attempt to create metrics for it. This caused
a NullPointerException to be logged repeatedly every time metrics were
scraped.

This fix adds a null check before attempting to monitor ThreadPerTaskExecutor.
If the MethodHandle is null, it logs a warning message indicating the
required JVM flag and skips monitoring the executor, preventing the
repeated exceptions.

Fixes gh-6882